k8s/fastapi-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
  labels:
    app: fastapi-board
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: fastapi-board
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fastapi-board
    spec:
      containers:
        - name: fastapi-container
          image: enohs/fastapi-board:a35cd180689baf9d75c263b76741a189b5c5d64e
          ports:
            - containerPort: 8000
