k8s/fastapi-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app.kubernetes.io/name: fastapi-board
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
